# email-triage-openenv

./: Dockerfile  baseline_inference.py  inference.py  models.py  openenv.yaml  pyproject.toml
data/: emails.py
data/data/: __init__.py
graders/: grader_easy.py  grader_hard.py  grader_medium.py
server/: app.py  environment.py
