[project]
name = "email-triage-openenv"
version = "1.0.0"
requires-python = ">=3.10"

dependencies = [
"fastapi>=0.110.0",
"uvicorn[standard]>=0.29.0",
"pydantic>=2.6.0",
"openai>=1.30.0",
"requests>=2.31.0",
"pyyaml>=6.0",
"httpx>=0.27.0",
"openenv>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
